--- a/themes/custom/mha_res/sass/screen.scss
+++ b/themes/custom/mha_res/sass/screen.scss
@@ -406,3 +406,17 @@ strong{
     background:  #5cb85c;
   }
 }
+#mha-permission-email-settings{
+  .form-type-textarea{
+    margin-top: 40px;
+    p{
+      font-size: 0.8em;
+      color: #777;
+    }
+  }
+  label{
+    font-size: 1.2em;
+    font-weight: bold;
+    color: #B01C2E;
+  }
+}
