--- a/themes/custom/mha_res/sass/screen.scss
+++ b/themes/custom/mha_res/sass/screen.scss
@@ -399,7 +399,7 @@ strong{
   }
 }
 .navbar-collapse{
-  a[href*="user"]{
+  a[href*="membership/apply"]{
     background:  #428bca;
   }
   a[href*="membership/home"]{
