added some code to lock down the user profile so members can update their own details and renew membership online

--- a/themes/custom/mha_res/css/screen.css
+++ b/themes/custom/mha_res/css/screen.css
@@ -508,3 +508,10 @@ strong {
       background: url("../images/price.png") no-repeat;
       padding: 5px 40px;
       font-weight: bold; }
+
+/* line 500, ../sass/screen.scss */
+.page-user .field-name-field-biography {
+  margin-bottom: 20px; }
+/* line 503, ../sass/screen.scss */
+.page-user .user-expiry {
+  margin-top: 20px; }
