--- a/themes/custom/mha_res/sass/screen.scss
+++ b/themes/custom/mha_res/sass/screen.scss
@@ -496,3 +496,11 @@ strong{
     }
   }
 }
+.page-user{
+  .field-name-field-biography{
+    margin-bottom: 20px;
+  }
+  .user-expiry{
+    margin-top: 20px;
+  }
+}
