--- a/themes/custom/mha_res/sass/screen.scss
+++ b/themes/custom/mha_res/sass/screen.scss
@@ -504,3 +504,18 @@ strong{
     margin-top: 20px;
   }
 }
+.view-id-events{
+  .view-display-id-block{
+    .date-display-single{
+      font-weight: bold;
+      margin-bottom: 1em;
+    }
+  }
+}
+.front{
+  .pane-block-1{
+    h2{
+      margin-bottom: 1em;
+    }
+  }
+}
